--- a/2.workflows.md
+++ b/2.workflows.md
@@ -119,7 +119,7 @@ spec:
 ```
 
 
-What happens if we append two templates in a sinle Workflow... Is it going to run two tasks? Let's test!
+What happens if we append two templates in a single Workflow... Is it going to run two tasks? Let's test!
 
 ```yaml
 apiVersion: argoproj.io/v1alpha1
