--- a/2.workflows.md
+++ b/2.workflows.md
@@ -4,7 +4,7 @@
 
 In ArgoWF there are multiple types of templates to define tasks.
 
-For the following examples, access to the VM and create these files in a directory and the apply them with the command:
+For the following examples, access to the VM and create these files in a directory and then apply them with the command:
 
 ```bash
 kubectl create -f example.yaml
@@ -33,7 +33,7 @@ spec:
       args: ["hello world"]
 ```
 
-Once you create one workflow you can take a look in that view the status of your running workflow.
+Once you create one Workflow you can take a look in that view the status of your running Workflow.
 
 If you click on it, you will find more detailed information about the Workflow, like:
 
@@ -178,7 +178,7 @@ I promissed I would show you how to create Workflows with multiple steps. We can
 
 **Steps**
 
-With this type of template we can run multiple steps sequentially/
+With this type of template we can run multiple steps sequentially.
 
 ```yaml
 apiVersion: argoproj.io/v1alpha1
@@ -256,7 +256,7 @@ spec:
       args: ["hello world"]
 ```
 
-Nice, I can simultaneous tasks/templates. But how can I define when a task depends of other? Then we need to introduce the `dependencies` parameter.
+Nice, I can use simultaneous tasks/templates. But how can I define when a task depends of another? Then we need to introduce the `dependencies` parameter.
 
 
 ```yaml
