--- a/5.outputs-conditionals.md
+++ b/5.outputs-conditionals.md
@@ -172,7 +172,7 @@ fi
 cd /mount/argowf-course
 commit_sha=`git rev-parse HEAD`
 owner_repo=devopscompanynl #replace this value with your username
-result_test=`cat /tmp/result.txt`
+result_test="{{inputs.parameters.test-result}}"
 github_token=xxxxxxxxx
 
 # http request that updates the status of the commit
