--- a/0.preparation.md
+++ b/0.preparation.md
@@ -1,7 +1,7 @@
 ### Setup hosts file
 
 Once you get the IP address from the instructor, you need to update the hosts file of your computer.
-
+Hello
 The `hosts` file is located in C:\Windows\System32\drivers\etc
 
 Add the following line, replace the `IP` with the IP address given by your instructor
